Prevent actions from overflowing the screen - Fixes https://github.com/kamilmielnik/scrabble-solver/issues/226 - Add --font--family--latin

--- a/packages/scrabble-solver/src/components/Board/Board.module.scss
+++ b/packages/scrabble-solver/src/components/Board/Board.module.scss
@@ -10,15 +10,7 @@
 
 .actions {
   position: absolute;
-  z-index: 1;
+  z-index: var(--z-index--actions);
   width: max-content;
   height: max-content;
-
-  [dir='ltr'] & {
-    transform: translateX(100%);
-  }
-
-  [dir='rtl'] & {
-    transform: translateX(-100%);
-  }
 }
