--- a/packages/scrabble-solver/src/components/Board/components/Cell/Cell.module.scss
+++ b/packages/scrabble-solver/src/components/Board/components/Cell/Cell.module.scss
@@ -115,7 +115,7 @@
     content: ' ';
 
     [lang='fa-IR'] & {
-      font-family: 'Open Sans', sans-serif;
+      font-family: var(--font--family--latin);
     }
   }
 
