--- a/packages/scrabble-solver/src/modals/SettingsModal/components/ConfigSetting/ConfigSetting.module.scss
+++ b/packages/scrabble-solver/src/modals/SettingsModal/components/ConfigSetting/ConfigSetting.module.scss
@@ -9,5 +9,5 @@
 .label {
   display: flex;
   align-items: center;
-  font-family: 'Open Sans', sans-serif;
+  font-family: var(--font--family--latin);
 }
