--- a/packages/scrabble-solver/src/styles/mixins.scss
+++ b/packages/scrabble-solver/src/styles/mixins.scss
@@ -27,7 +27,7 @@ $media-expressions: (
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1;
+    z-index: var(--z-index--focus-effect);
     transition: var(--transition);
     border-radius: var(--border--radius);
     box-shadow: 0 0 0 var(--focus-effect--size) transparent;
